# model-deployment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  make_celery.py  notebook.ipynb  pyproject.toml  requirements.txt  transform_data.py
.github/workflows/: example.yml
api/: __init__.py  extensions.py  routes.py  server.py
