[project]
name = "project-from-model-to-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.1",
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "vercel>=0.3.5",
]
