[project]
name = "project-from-model-to-production"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.5.3",
    "flask>=3.1.2",
    "redis>=5.2.1",
    "vercel>=0.3.5",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "tqdm>=4.67.1",
]
